# super8_scanner_rev2

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_output.txt  errors.txt
include/: Camera.h  Config.h  MarlinController.h
src/: Camera.cpp  MarlinController.cpp  main.cpp
